--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-CTYPE html>
-<htl>
-<boy>
-
-<p>Thi is a paragrph.</p><p>This is a paragraph.</p>
-<p>This i paragraph.</p>
-
-/boy>
-</tml>
+<html>
+<body style="background-color:powderblue;">
+	<h1 style="background-color:Tomato;">
+		This is the Header! 
+	</h1>
+	
+</body>	
+</html>
 
