--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-<body style="background-color:powderblue;">
+<body style="background-color:lightgray;">
 	<h1 style="background-color:Tomato;">
-		This is the Header! 
+		<center>This is the Header!</center> 
 	</h1>
 	
 </body>	
