--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <html>
-<body style="background-color:lightgray;">
+<body style="background-color:SlateBlue;">
+	
 	<h1 style="background-color:Tomato;">
-		<center>This is the Header!</center> 
+		<center>/Shellhorse</center> 
 	</h1>
 	
-</body>	
+</body>
+<style>
+ body {
+	background-image:url(nate-rayfield-_WR6tUIAJe8-unsplash.jpg);
+ } 
 </html>
 
