Update Webpage background

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <body style="background-color:SlateBlue;">
 	
 	<h1 style="background-color:Tomato;">
-		<center>/Shellhorse</center> 
+		<center>Shellhorse</center> 
 	</h1>
 	
-</body>
+</body>	
 <style>
- body {
-	background-image:url(nate-rayfield-_WR6tUIAJe8-unsplash.jpg);
- } 
+body {
+	  background-image: url('nate-rayfield-_WR6tUIAJe8-unsplash');
+}
+</style
 </html>
 
