Test background update

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
+<!DOCTYPE html>
 <html>
-<body style="background-color:SlateBlue;">
+	<style>
+	body{
+		background-image: url('nate-rayfield-_WR6tUIAJe8-unsplash');
+	}
+	</style>
+	
+	<body>
 	
 	<h1 style="background-color:Tomato;">
 		<center>Shellhorse</center> 
 	</h1>
 	
-</body>	
-<style>
-body {
-	  background-image: url('nate-rayfield-_WR6tUIAJe8-unsplash');
-}
-</style
+	</body>	
 </html>
 
