--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A Computer Science Major and Mathematics Minor at <a href="https://Valdosta.edu">Valdosta State University</a></p>
+								<h1>Shellhorse</h1>
+								<p>A Computer Science Major and Mathematics Minor at <a href="https://www.Valdosta.edu">Valdosta State University</a></p>
 							</div>
 						</div>
 						<nav>
