--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!--Navbar Section-->
 	<nav class="navbar">
 		<div class="navbar__container">
-			<a href="#home" id="navbar__logo">SHELLHORSE</a>
+			<a href="#home" id="navbar__logo">JS</a>
 			<div class="navbar__toggle" id="mobile-menu">
 				<span class="bar"></span>
 				<span class="bar"></span>
@@ -21,16 +21,13 @@
 					<a href="#home" class="navbar__links" id="home-page">Home</a>
 				</li>
 				<li class="navbar__item">
-					<a href="#About" class="navbar__links" id="About-page">About</a>
+					<a href="#about" class="navbar__links" id="about-page">About</a>
 				</li>
 				<li class="navbar__item">
-					<a href="#Projects" class="navbar__links" id="Projects-page">Projects</a>
-				</li>
-				<li class="navbar__item">
-					<a href="#Visualizers" class="navbar__links" id="Visualizers-page">Visualizers</a>
+					<a href="#projects" class="navbar__links" id="projects-page">Projects</a>
 				</li>
 				<li class="navbar__btn">
-					<a href="#Contact" class="button" id="Contact">Contact</a>
+					<a href="#contact" class="button" id="Contact">Contact</a>
 				</li>
 			</ul>
 		</div>
@@ -39,9 +36,9 @@
 	<!-- Hero Section -->
 	<div class="hero" id="home">
 		<div class="hero__container">
-			<h1 class="hero__heading">Choose your <span>colors</span></h1>
-			<p class="hero__description">Unlimited Possibilities</p>
-			<button class="main__btn"><a href="#">Explore</a></button>
+			<h1 class="hero__heading">HELLO WORLD,</h1>
+			<h2 class="hero__heading">I'm <span>J</span>ordan <span>S</span>hellhorse</h2>
+			<p class="hero__description">This is my website </p>
 		</div>
 	</div>
 
@@ -49,13 +46,25 @@
 	<div class="main" id="about">
 		<div class="main__container">
 			<div class="main__img--container">
-				<div class="main__img--card">ICON</div>
-			</div>
+				<div class="main__img--card">
+					<img src="https://i.pinimg.com/originals/3a/46/cd/3a46cd297189fe90c388116aa9e7ba04.jpg" alt=""></div>
+				</div>
 			<div class="main__content">
-				<h1>Who am I?</h1>
-				<h2>We Help businesses scale</h2>
-				<p>Schedule a call to learn more about our sevices</p>
-				<button class="main__btn"><a href="#">Schedule Call</a></button>
+				<h1>About Me</h1>
+				<p>
+					Computer Science Graduate with a minor in mathematics, graduated from <a href="https://www.valdosta.edu/" class="url">Valdosta State Univeristy</a> in December of 2020.
+					Learned a variety of different programming languages while in school:
+				</p> 
+				
+				<ul> 
+					<li>Java</li> 
+					<li>Python</li> 
+					<li>C</li>
+				</ul>
+
+				<p>Continued to hone my skills in languages I have learned while learning new languages like <span>JavaScript</span>, <span>HTML</span>, and <span>CSS</span></p>
+		
+				<button class="main__btn"><a href="#">Contact</a></button>
 			</div>
 		</div>
 	</div>
@@ -67,12 +76,12 @@
 			<div class="projects__card">
 				<h2>DnD Character Manager</h2>
 				<p>A Dnd Character Manager created using Java and an Agile working environment</p>
-				<div class="projects__btn"><button>GitHub</button></div>
+				<div class="projects__btn"><button><a href="https://github.com/Shellhorse/Shellhorse.github.io">GitHub</a></button></div>
 			</div>
 			<div class="projects__card">
 				<h2>A* Pathfinding Visualizer</h2>
 				<p>A pathfinding visualizer created using Python</p>
-				<div class="projects__btn"><button>GitHub</button></div>
+				<div class="projects__btn"><button><a href="https://github.com/Shellhorse/Shellhorse.github.io">GitHub</a></button></div>
 			</div>
 			<div class="projects__card">
 				<h2>Coding Projects</h2>
@@ -82,7 +91,7 @@
 			<div class="projects__card">
 				<h2>This Website</h2>
 				<p>Website created using Html, CSS, and JavaScript</p>
-				<div class="projects__btn"><button>GitHub</button></div>
+				<div class="projects__btn"><button><a href="https://github.com/Shellhorse/Shellhorse.github.io">GitHub</a></button></div>
 			</div>
 		</div>
 	</div>
