--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
 			<div class="projects__card" style="background-image: url('./assets/Dnd.jpg');">
 				<h2>DnD Character Manager</h2>
 				<p>A Dnd Character Manager created using Java and an Agile working environment</p>
-				<div class="projects__btn"><a href="https://github.com/Shellhorse/Shellhorse.github.io"><button>GitHub</button></a></div>
+				<div class="projects__btn"><a href="https://github.com/Shellhorse/Dungeons-And-Dragons-Character-Manager"><button>GitHub</button></a></div>
 			</div>
 			<div class="projects__card" style="background-image: url('./assets/pathfinding.png');">
 				<h2>A* Pathfinding Visualizer</h2>
 				<p>A pathfinding visualizer created using Python</p>
-				<div class="projects__btn"><a href="https://github.com/Shellhorse/Shellhorse.github.io"><button>GitHub</button></a></div>
+				<div class="projects__btn"><a href="https://github.com/Shellhorse/A-Pathfinding"><button>GitHub</button></a></div>
 			</div>
 			<div class="projects__card" style="background-image: url('./assets/work-in-progress.png');">
 				<h2>Current Project</h2>
@@ -97,10 +97,10 @@
 	</div>
 
 	<div class="contact__form" id="myForm">
-		<form class="contact__form__container" method="POST" actions="contact-form-handler.php">
+		<form class="contact__form__container" method="POST" actions="">
 			<ul class="top">
 				<li>
-					<h1>Contact Me</h1>
+					<h1>Does not work on GitHub</h1>
 				</li>
 				<li>
 					<button class="close__contact" onclick="closeForm()">X</button>
