Chess Game Completed

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name = 'description' content = 'Everthing you need to know about Jordan'>
         <title>About Jordan Shellhorse</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.12.0/devicon.min.css">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -42,7 +43,7 @@
             <img class = 'branch' src="assets/branch_2.svg" alt="Branch">
             <h2>Projects</h2>
             <div class="project">
-                <h3>Sorting Visualizer</h3>
+                <h3><i class="devicon-javascript-plain"></i><i class="devicon-html5-plain"></i><i class="devicon-css3-plain"></i>Sorting Visualizer</h3>
                 <div class="overflow-hide">
                     <div class = 'project-info'>
                         <p>A visualizer that lets you choose from 5 different sorting mehtods, change the speed at which it sorts, and change the number of items to be sorted.</p>
@@ -71,7 +72,7 @@
                 </div>
             </div>
             <div class="project">
-                <h3>Dungeons and Dragon Character Sheet</h3>
+                <h3><i class="devicon-java-plain"></i>Dungeons and Dragon Character Sheet</h3>
                 <div class="overflow-hide">
                     <div class = 'project-info'>
                         <p>With a team of 4 we created a character sheet that automaticaly puts in information from the base traits chosen. Has a login system that keeps information on the characters an individual creates. Used git as the version control system.</p>
@@ -98,7 +99,7 @@
                 </div>
             </div>
             <div class="project">
-                <h3>Ocufly</h3>
+                <h3><i class="devicon-python-plain"></i>Ocufly</h3>
                 <div class="overflow-hide">
                     <div class = 'project-info'>
                         <p>A project with a team of 7, we had to plan, create, and present our project, <a href="https://cs4900-team-deku.github.io/#" target="_blank" rel="noopener" rel='noreferrer'>Ocufly</a> - Flight and object recognition software for drones for harsh environments or dangerous situations. </p>
@@ -125,7 +126,7 @@
                 </div>
             </div>
             <div class="project">
-                <h3>Wine Classification Artificial Nueral Network</h3>
+                <h3><i class="devicon-python-plain"></i><i class="devicon-tensorflow-original"></i>Wine Classification Artificial Nueral Network</h3>
                 <div class="overflow-hide">
                     <div class = 'project-info'>
                         <p>An artificial nueral network (ANN) that classified a wine dataset into three classes.</p>
@@ -152,7 +153,7 @@
                 </div>
             </div>
             <div class="project">
-                <h3>Google Docs Clone</h3>
+                <h3><i class="devicon-react-original"></i><i class="devicon-nodejs-plain"></i>Google Docs Clone</h3>
                 <div class="overflow-hide">
                     <div class = 'project-info'>
                         <p>A clone of google docs that was created using React, socket.io, and node.js. Allows multiple documents to be opened all with different ids.</p>
@@ -168,11 +169,8 @@
                                 <h4>Solutions</h4>
                                 <ul>
                                     <li>Found open source text Editor named Quill</li>
-                                    <li>Used matplotlib to show data visually</li>
+                                    <li>Using socket.io and different document ids with uuidv4</li>
                                 </ul>
-                            </div>
-                            <div class="project-images">
-                                <a href="assets/ANN-wine.png"><img class = 'project-img' src="assets/ANN-wine.png" alt="Sorting"></a>
                             </div>
                         </div>
                     </div>
